started home page

--- a/src/app/modules/Home/home.component.html
+++ b/src/app/modules/Home/home.component.html
@@ -1,1 +1,4 @@
-<p>home works!</p>
+<div class="home">
+  <h1>Welcome to English for Natty</h1>
+  <p>This is my learning space to a new opportunity</p>
+</div>
